k8s/nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9113"
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: nginx-conf-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      - name: nginx-exporter-container
        image: nginx/nginx-prometheus-exporter:1.0.0
        ports:
        - name: metrics
          containerPort: 9113
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html-config
          defaultMode: 0755
      - name: nginx-conf-volume
        configMap:
          name: nginx-conf-config
          defaultMode: 0644
          items:
          - key: nginx.conf
            path: nginx.conf
