k8s/nginx/nginx-complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        hostPath:
          # Esta ruta apunta a la carpeta 'src' de tu máquina, que fue montada en Minikube en /host-html.
          path: /host-html
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx # El selector coincide con la etiqueta del Deployment
  type: NodePort
  ports:
    - protocol: TCP
      port: 80 # Puerto interno del Service
      targetPort: 80 # Puerto del contenedor
