k8s/nginx/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    # Esta anotación solo se aplica a esta regla
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: lab.local
    http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 80
