k8s/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  annotations:
    # La anotación global para reescribir la URL.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: lab.local
    http:
      paths:
      # Regla para Nginx
      - path: /()(.*)
        # --- CORREGIDO ---
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 80

      # Regla para Prometheus
      - path: /prometheus(/|$)(.*)
        # --- CORREGIDO ---
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090

      # Regla para Grafana
      - path: /grafana(/|$)(.*)
        # --- CORREGIDO ---
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 3000
